<resources>
    <string name="app_name">LevelUp</string>

    <string name="section_workout">Workouts</string>
    <string name="section_exercise_library">Exercise Library</string>
    <string name="section_body_weight">Body Weight</string>

    <string name="title_exercise">Exercises</string>
    <string name="title_progress">Progress</string>
    <string name="title_set">Set</string>
    <string name="title_sets">Sets</string>
    <string name="title_set_drop">Drop set</string>
    <string name="title_new_weight">New Body Weight</string>
    <string name="title_update_body_weight">Update Body Weight</string>
    <string name="title_new_exercise">New Exercise</string>
    <string name="title_exercise_category">Exercise Category</string>
    <string name="title_new_workout">New Workout</string>
    <string name="title_edit_workout">Edit Workout</string>
    <string name="title_range_minimum">Min.</string>
    <string name="title_range_maximum">Max.</string>
    <string name="title_range">Range</string>
    <string name="title_choose_exercises">Choose Exercise</string>
    <string name="title_warning">Warning!</string>
    <string name="title_weight">Weight</string>
    <string name="title_reps">Reps</string>
    <string name="title_reps_right">Right reps</string>
    <string name="title_reps_left">Left reps</string>
    <string name="title_plus">+</string>
    <string name="title_previous">Previous</string>

    <string name="exercise_category_all">All</string>
    <string name="exercise_category_push">Push</string>
    <string name="exercise_category_pull">Pull</string>
    <string name="exercise_category_legs">Legs</string>
    <string name="exercise_category_core">Core</string>

    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>

    <string name="action_add_exercise">Add Exercise</string>
    <string name="action_add">Add</string>
    <string name="action_note_down">Note down</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_accept">Accept</string>
    <string name="action_ok">OK</string>
    <string name="action_close">Close</string>
    <string name="action_add_set">Set</string>
    <string name="action_add_drop_set">Drop set</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_replace">Replace</string>
    <string name="action_complete_set">Complete Set</string>

    <string name="form_input_text_title">Title</string>
    <string name="form_input_text_range">Range</string>
    <string name="form_input_text_weight">Weight</string>
    <string name="form_input_text_repetitions">Reps</string>
    <string name="form_input_text_repetitions_partials">Partials</string>
    <string name="form_input_text_name_exercise">Exercise name</string>
    <string name="form_text_unilateral">Unilateral</string>
    <string name="form_input_text_name_workout">Workout name</string>

    <string name="message_unilateral">By enabling this, you will have to write down weights and reps for each arm/leg</string>

    <string name="placeholder_weight">%s Kg</string>
    <string name="placeholder_weight_unilateral">%s/%s Kg</string>
    <string name="placeholder_reps">%s+%s Reps</string>
    <string name="placeholder_reps_unilateral">%s+%s/%s+%s Reps</string>
    <string name="placeholder_set">Set %s</string>
    <string name="placeholder_range">%s - %s</string>
    <string name="placeholder_range_title">Range %s - %s</string>
    <string name="placeholder_exercise_with_number">%s exercises</string>
    <string name="placeholder_one_variable">%s</string>

    <string name="error_blank_input">Please, fill in this field</string>
    <string name="error_incorrect_structure">Make sure the input follows the pattern X.X</string>
    <string name="error_weight_negative_value">Really, negative weight? Does that have any sense?</string>
    <string name="error_weight_zero_value">Only light can be weightless</string>
    <string name="error_weight_exists">A weight already exists for today, but you can modify it</string>
    <string name="error_no_exercises_added">Workout without exercises? Don\'t be lazy, add a few of them</string>
    <string name="error_no_sets_added_to_exercise">Make sure to add sets to each exercise!</string>
    <string name="error_set_not_completed">Make sure to fill weights, reps and partials to mark a set as completed</string>
    <string name="error_exercises_sets_not_completed">Make sure to mark all exercise\'s sets as completed to finish the workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_start_workout">Start workout</string>
    <string name="action_finish">Finish</string>
</resources>