<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/workoutsFragment">

    <fragment
        android:id="@+id/bodyWeightProgressFragment"
        android:name="com.carlosdiestro.levelup.bodyweight_progress.ui.bodyweight_list.BodyWeightProgressFragment"
        android:label="@string/section_body_weight"
        tools:layout="@layout/fragment_body_weight_progress" />
    <fragment
        android:id="@+id/exerciseLibraryFragment"
        android:name="com.carlosdiestro.levelup.exercise_library.ui.ExerciseLibraryFragment"
        android:label="@string/section_exercise_library"
        tools:layout="@layout/fragment_exercise_library">
        <action
            android:id="@+id/toNewExerciseFragment"
            app:destination="@id/newExerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/newExerciseFragment"
        android:name="com.carlosdiestro.levelup.exercise_library.ui.exercise_add.NewExerciseFragment"
        android:label="@string/title_new_exercise" >
        <argument
            android:name="exercise"
            app:argType="com.carlosdiestro.levelup.exercise_library.ui.models.ExercisePLO"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/workoutsFragment"
        android:name="com.carlosdiestro.levelup.workouts.ui.WorkoutsFragment"
        android:label="@string/section_workout"
        tools:layout="@layout/fragment_workouts">
        <action
            android:id="@+id/toNewWorkoutFragment"
            app:destination="@id/newWorkoutFragment" />
        <action
            android:id="@+id/toWorkoutDetailsFragment"
            app:destination="@id/workoutDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/newWorkoutFragment"
        android:name="com.carlosdiestro.levelup.workouts.ui.workout_add.NewWorkoutFragment"
        tools:layout="@layout/fragment_new_workout">
        <action
            android:id="@+id/toExerciseChooserFragment"
            app:destination="@id/exerciseChooserFragment" />
        <argument
            android:name="workoutId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/exerciseChooserFragment"
        android:name="com.carlosdiestro.levelup.workouts.ui.workout_add.ExerciseChooserFragment"
        android:label="@string/title_choose_exercises"
        tools:layout="@layout/fragment_exercise_chooser" />
    <fragment
        android:id="@+id/workoutDetailsFragment"
        android:name="com.carlosdiestro.levelup.workouts.ui.workout_details.WorkoutDetailsFragment"
        tools:layout="@layout/fragment_workout_details">
        <argument
            android:name="workoutId"
            app:argType="integer" />
        <argument
            android:name="workoutName"
            app:argType="string" />
        <action
            android:id="@+id/toOnGoingWorkoutFragment"
            app:destination="@id/onGoingWorkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/onGoingWorkoutFragment"
        android:name="com.carlosdiestro.levelup.workouts.ui.workout_on_going.OnGoingWorkoutFragment"
        tools:layout="@layout/fragment_on_going_workout">
        <argument
            android:name="workoutId"
            app:argType="integer" />
        <argument
            android:name="workoutName"
            app:argType="string" />
    </fragment>
</navigation>