<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16"
    tools:context=".workouts.ui.workout_add.ExerciseChooserFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:chipSpacingHorizontal="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cPush"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exercise_category_push" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cPull"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exercise_category_pull" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cLegs"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exercise_category_legs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cCore"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exercise_category_core" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/animation_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cgCategories"
        tools:listitem="@layout/item_exercise" />

    <include
        android:id="@+id/lNoData"
        layout="@layout/layout_no_data" />

</androidx.constraintlayout.widget.ConstraintLayout>